# Superpico

./: README.md
case/: Superpico_Case_Bottom.stl  Superpico_Case_Top.stl
code/: CMakeLists.txt  bin2c.py  main.c
code/batch/: batch.py
pcb/: BOM.csv  PickAndPlace.csv
